Change of variant names

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6488,7 +6488,6 @@ selectorAffix."two/sansSerif" = "curlyNeck"
 
 [prime.two.variants-buildup.stages.serifs.serifless]
 rank = 1
-keyAffix = ""
 descriptionJoiner = "without"
 descriptionAffix = "serifs"
 selectorAffix.two = "serifless"
@@ -6528,7 +6527,6 @@ selectorAffix."three/sansSerif" = "twoArcs"
 
 [prime.three.variants-buildup.stages.serifs.serifless]
 rank = 1
-keyAffix = ""
 descriptionJoiner = "without"
 descriptionAffix = "serifs"
 selectorAffix.three = "serifless"
@@ -6588,7 +6586,6 @@ selectorAffix."four/sansSerif" = "nonCrossing"
 
 [prime.four.variants-buildup.stages.serifs.serifless]
 rank = 1
-keyAffix = ""
 descriptionJoiner = "without"
 descriptionAffix = "serifs"
 selectorAffix.four = "serifless"
@@ -6646,7 +6643,6 @@ selectorAffix.zhuangToneFive = "flat"
 
 [prime.five.variants-buildup.stages.serifs.serifless]
 rank = 1
-keyAffix = ""
 descriptionJoiner = "without"
 descriptionAffix = "serifs"
 selectorAffix.five = "serifless"
@@ -7548,7 +7544,6 @@ selector."lig-hyphen" = "withoutNotch"
 sampler = "++ "
 samplerExplain = "Plus ligations"
 tagKind = "ligature"
-nonBreakingTagForNewVariantSelector = "VXAA"
 
 [prime.lig-plus-chain.variants.with-notch]
 rank = 1
@@ -7725,10 +7720,10 @@ cyrl-ya = "straight-serifless"
 # Digits
 zero = "slashed"
 one = "no-base"
-two = "curly-neck"
+two = "curly-neck-serifless"
 three = "two-arcs"
-four = "semi-open"
-five = "upright-arched"
+four = "semi-open-serifless"
+five = "upright-arched-serifless"
 six = "straight-bar"
 seven = "straight-serifless"
 eight = "crossing"
@@ -7939,8 +7934,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 nine = "closed-contour"
 asterisk = "hex-mid"
@@ -8116,8 +8111,8 @@ cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 nine = "closed-contour"
 asterisk = "hex-mid"
@@ -8221,8 +8216,8 @@ cyrl-ef = "serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
@@ -8310,7 +8305,7 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-dotted"
 one = "base"
-two = "straight-neck"
+two = "straight-neck-serifless"
 six = "closed-contour"
 eight = "crossing-asymmetric"
 nine = "open-contour"
@@ -8396,8 +8391,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-four = "closed"
-five = "oblique-arched"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
@@ -8487,7 +8482,7 @@ cyrl-ef = "serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 one = "base"
-four = "closed"
+four = "closed-serifless"
 six = "closed-contour"
 seven = "curly-serifless"
 nine = "closed-contour"
@@ -8589,8 +8584,8 @@ cyrl-ef = "serifless"
 cyrl-capital-ya = "curly-serifless"
 cyrl-ya = "curly-serifless"
 zero = "diamond-reverse-slashed-split"
-four = "closed"
-five = "upright-flat"
+four = "closed-serifless"
+five = "upright-flat-serifless"
 six = "closed-contour"
 seven = "curly-serifless"
 nine = "closed-contour"
@@ -8697,9 +8692,9 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-dotted"
 one = "base-flat-top-serif"
-two = "straight-neck"
-four = "closed"
-five = "oblique-arched"
+two = "straight-neck-serifless"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
@@ -8782,7 +8777,7 @@ lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight"
 lower-tau = "flat-tailed"
 one = "base-flat-top-serif"
-four = "closed"
+four = "closed-serifless"
 eight = "two-circles"
 underscore = "low"
 guillemet = "straight"
@@ -8834,9 +8829,9 @@ description = "X Window Style"
 [composite.ss11.design]
 zero = "oval-unslashed"
 one = "base"
-two = "straight-neck"
-three = "flat-top"
-four = "closed"
+two = "straight-neck-serifless"
+three = "flat-top-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
@@ -8898,8 +8893,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-dotted"
 one = "base"
-four = "closed"
-five = "oblique-arched"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "open-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
@@ -9008,7 +9003,7 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-unslashed"
 one = "base"
-four = "closed"
+four = "closed-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
@@ -9096,10 +9091,10 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-two = "straight-neck"
-three = "flat-top"
-four = "semi-open-non-crossing"
-five = "upright-flat"
+two = "straight-neck-serifless"
+three = "flat-top-serifless"
+four = "semi-open-non-crossing-serifless"
+five = "upright-flat-serifless"
 seven = "straight-serifed"
 eight = "two-circles"
 asterisk = "penta-low"
@@ -9196,9 +9191,9 @@ cyrl-capital-ya = "straight-motion-serifed"
 cyrl-ya = "straight-motion-serifed"
 zero = "dotted"
 one = "base"
-two = "straight-neck"
-four = "closed"
-five = "oblique-arched"
+two = "straight-neck-serifless"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "open-contour"
 seven = "straight-serifed"
 eight = "two-circles"
@@ -9318,9 +9313,9 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 cyrl-ya = "straight-motion-serifed"
 one = "base"
-two = "straight-neck"
-three = "flat-top"
-four = "closed"
+two = "straight-neck-serifless"
+three = "flat-top-serifless"
+four = "closed-serifless"
 six = "open-contour"
 eight = "crossing-asymmetric"
 nine = "open-contour"
@@ -9407,8 +9402,7 @@ cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-capital-ya = "straight-motion-serifed"
 one = "base"
-four = "semi-open"
-five = "oblique-arched"
+five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "straight-serifed"
 nine = "closed-contour"
@@ -9525,8 +9519,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-four = "closed"
-five = "upright-flat"
+four = "closed-serifless"
+five = "upright-flat-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
