Add selectable serifed variants of digits. (#1965) (#2193)
* Add selectable serifed variants of digits.

* Change of variant names

* doc

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6467,15 +6467,37 @@ selector."one/sansSerif" = "noBaseTopCut"
 sampler = "2"
 tagKind = "digit"
 
-[prime.two.variants.straight-neck]
-rank = 1
-description = "`2` with straight neck"
-selector.two = "straightNeck"
+[prime.two.variants-buildup]
+entry = "body"
+descriptionLeader = "`2`"
 
-[prime.two.variants.curly-neck]
+[prime.two.variants-buildup.stages.body."*"]
+next = "serifs"
+
+[prime.two.variants-buildup.stages.body.straight-neck]
+rank = 1
+descriptionAffix = "straight neck"
+selectorAffix.two = "straightNeck"
+selectorAffix."two/sansSerif" = "straightNeck"
+
+[prime.two.variants-buildup.stages.body.curly-neck]
 rank = 2
-description = "`2` with curly neck"
-selector.two = "curlyNeck"
+descriptionAffix = "curly neck"
+selectorAffix.two = "curlyNeck"
+selectorAffix."two/sansSerif" = "curlyNeck"
+
+[prime.two.variants-buildup.stages.serifs.serifless]
+rank = 1
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.two = "serifless"
+selectorAffix."two/sansSerif" = "serifless"
+
+[prime.two.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.two = "serifed"
+selectorAffix."two/sansSerif" = "serifless"
 
 
 
@@ -6483,15 +6505,38 @@ selector.two = "curlyNeck"
 sampler = "3"
 tagKind = "digit"
 
-[prime.three.variants.flat-top]
-rank = 1
-description = "Flat top `3` (Like Museo Sans / Montserrat)"
-selector.three = "flatTop"
+[prime.three.variants-buildup]
+entry = "body"
+descriptionLeader = "`3`"
 
-[prime.three.variants.two-arcs]
+[prime.three.variants-buildup.stages.body."*"]
+next = "serifs"
+
+[prime.three.variants-buildup.stages.body.flat-top]
+rank = 1
+descriptionAffix = "flat top (Like Museo Sans / Montserrat)"
+selectorAffix.three = "flatTop"
+selectorAffix."three/sansSerif" = "flatTop"
+
+[prime.three.variants-buildup.stages.body.two-arcs]
 rank = 2
-description = "Arched top `3`"
-selector.three = "twoArcs"
+next = "END"
+descriptionAffix = "arched top"
+selectorAffix.three = "twoArcs"
+selectorAffix."three/sansSerif" = "twoArcs"
+
+[prime.three.variants-buildup.stages.serifs.serifless]
+rank = 1
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.three = "serifless"
+selectorAffix."three/sansSerif" = "serifless"
+
+[prime.three.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.three = "serifed"
+selectorAffix."three/sansSerif" = "serifless"
 
 
 
@@ -6499,35 +6544,58 @@ selector.three = "twoArcs"
 sampler = "4"
 tagKind = "digit"
 
-[prime.four.variants.closed]
+[prime.four.variants-buildup]
+entry = "openness"
+descriptionLeader = "`4`"
+
+[prime.four.variants-buildup.stages.openness."*"]
+next = "horizontal-bar"
+
+[prime.four.variants-buildup.stages.openness.closed]
 rank = 1
-description = "`4` with closed contour"
-selector.four = "closed"
+descriptionAffix = "closed contour"
+selectorAffix.four = "closed"
+selectorAffix."four/sansSerif" = "closed"
 
-[prime.four.variants.closed-non-crossing]
+[prime.four.variants-buildup.stages.openness.semi-open]
 rank = 2
-description = "`4` with closed contour but the horizontal bar does not overflow the vertical bar"
-selector.four = "closedNonCrossing"
+descriptionAffix = "semi-open contour"
+selectorAffix.four = "semiOpen"
+selectorAffix."four/sansSerif" = "semiOpen"
 
-[prime.four.variants.semi-open]
+[prime.four.variants-buildup.stages.openness.open]
 rank = 3
-description = "`4` with semi-open contour"
-selector.four = "semiOpen"
+descriptionAffix = "open contour"
+selectorAffix.four = "open"
+selectorAffix."four/sansSerif" = "open"
 
-[prime.four.variants.semi-open-non-crossing]
-rank = 4
-description = "`4` with semi-open contour but the horizontal bar does not overflow the vertical bar"
-selector.four = "semiOpenNonCrossing"
+[prime.four.variants-buildup.stages.horizontal-bar."*"]
+next = "serifs"
 
-[prime.four.variants.open]
-rank = 5
-description = "`4` with open contour"
-selector.four = "open"
+[prime.four.variants-buildup.stages.horizontal-bar.crossing]
+rank = 1
+keyAffix = ""
+selectorAffix.four = "crossing"
+selectorAffix."four/sansSerif" = "crossing"
 
-[prime.four.variants.open-non-crossing]
-rank = 6
-description = "`4` with open contour but the horizontal bar does not overflow the vertical bar"
-selector.four = "openNonCrossing"
+[prime.four.variants-buildup.stages.horizontal-bar.non-crossing]
+rank = 2
+descriptionAffix = "horizontal bar that does not overflow the vertical bar"
+selectorAffix.four = "nonCrossing"
+selectorAffix."four/sansSerif" = "nonCrossing"
+
+[prime.four.variants-buildup.stages.serifs.serifless]
+rank = 1
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.four = "serifless"
+selectorAffix."four/sansSerif" = "serifless"
+
+[prime.four.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.four = "serifed"
+selectorAffix."four/sansSerif" = "serifless"
 
 
 
@@ -6546,25 +6614,47 @@ next = "middle"
 rank = 1
 descriptionAffix = "upright upper-left bar"
 selectorAffix.five = "upright"
+selectorAffix."five/sansSerif" = "upright"
 selectorAffix.zhuangToneFive = "upright"
 
 [prime.five.variants-buildup.stages.upper-left-bar.oblique]
 rank = 2
 description = "oblique upper-left bar"
 selectorAffix.five = "oblique"
+selectorAffix."five/sansSerif" = "oblique"
 selectorAffix.zhuangToneFive = "upright"
+
+[prime.five.variants-buildup.stages.middle."*"]
+next = "serifs"
 
 [prime.five.variants-buildup.stages.middle.arched]
 rank = 1
 descriptionAffix = "arched middle part"
 selectorAffix.five = "arched"
+selectorAffix."five/sansSerif" = "arched"
 selectorAffix.zhuangToneFive = "arched"
 
 [prime.five.variants-buildup.stages.middle.flat]
 rank = 2
 descriptionAffix = "flat middle part"
 selectorAffix.five = "flat"
+selectorAffix."five/sansSerif" = "flat"
 selectorAffix.zhuangToneFive = "flat"
+
+[prime.five.variants-buildup.stages.serifs.serifless]
+rank = 1
+descriptionJoiner = "without"
+descriptionAffix = "serifs"
+selectorAffix.five = "serifless"
+selectorAffix."five/sansSerif" = "serifless"
+selectorAffix.zhuangToneFive = "serifless"
+
+[prime.five.variants-buildup.stages.serifs.serifed]
+rank = 2
+descriptionAffix = "serifs"
+selectorAffix.five = "serifed"
+selectorAffix."five/sansSerif" = "serifless"
+selectorAffix.zhuangToneFive = "serifed"
 
 
 
@@ -7454,7 +7544,6 @@ selector."lig-hyphen" = "withoutNotch"
 sampler = "++ "
 samplerExplain = "Plus ligations"
 tagKind = "ligature"
-nonBreakingTagForNewVariantSelector = "VXAA"
 
 [prime.lig-plus-chain.variants.with-notch]
 rank = 1
@@ -7631,10 +7720,10 @@ cyrl-ya = "straight-serifless"
 # Digits
 zero = "slashed"
 one = "no-base"
-two = "curly-neck"
+two = "curly-neck-serifless"
 three = "two-arcs"
-four = "semi-open"
-five = "upright-arched"
+four = "semi-open-serifless"
+five = "upright-arched-serifless"
 six = "straight-bar"
 seven = "straight-serifless"
 eight = "crossing"
@@ -7764,6 +7853,9 @@ cyrl-ef = "serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
 one = "base"
+two = "curly-neck-serifed"
+four = "semi-open-serifed"
+five = "upright-arched-serifed"
 seven = "straight-serifed"
 micro-sign = "toothed-serifed"
 
@@ -7842,8 +7934,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 nine = "closed-contour"
 asterisk = "hex-mid"
@@ -7890,6 +7982,8 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -7940,8 +8034,8 @@ cyrl-ef = "split-serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 six = "closed-contour"
 seven = "bend-serifed"
 eight = "two-circles"
@@ -8017,8 +8111,8 @@ cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 nine = "closed-contour"
 asterisk = "hex-mid"
@@ -8066,6 +8160,8 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 micro-sign = "tailed-serifed"
 
 [composite.ss03.slab-override.italic]
@@ -8120,8 +8216,8 @@ cyrl-ef = "serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 one = "base"
-two = "straight-neck"
-four = "closed"
+two = "straight-neck-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
@@ -8168,6 +8264,8 @@ cyrl-ka = "straight-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
 micro-sign = "tailed-serifed"
 
 
@@ -8207,7 +8305,7 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-dotted"
 one = "base"
-two = "straight-neck"
+two = "straight-neck-serifless"
 six = "closed-contour"
 eight = "crossing-asymmetric"
 nine = "open-contour"
@@ -8256,6 +8354,7 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+two = "straight-neck-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -8292,8 +8391,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-four = "closed"
-five = "oblique-arched"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
@@ -8341,6 +8440,8 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8381,7 +8482,7 @@ cyrl-ef = "serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 one = "base"
-four = "closed"
+four = "closed-serifless"
 six = "closed-contour"
 seven = "curly-serifless"
 nine = "closed-contour"
@@ -8426,6 +8527,7 @@ cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
 seven = "curly-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8482,8 +8584,8 @@ cyrl-ef = "serifless"
 cyrl-capital-ya = "curly-serifless"
 cyrl-ya = "curly-serifless"
 zero = "diamond-reverse-slashed-split"
-four = "closed"
-five = "upright-flat"
+four = "closed-serifless"
+five = "upright-flat-serifless"
 six = "closed-contour"
 seven = "curly-serifless"
 nine = "closed-contour"
@@ -8540,6 +8642,8 @@ cyrl-u = "curly-serifed"
 cyrl-ef = "serifed"
 cyrl-capital-ya = "curly-serifed"
 cyrl-ya = "curly-serifed"
+four = "closed-serifed"
+five = "upright-flat-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8588,9 +8692,9 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-dotted"
 one = "base-flat-top-serif"
-two = "straight-neck"
-four = "closed"
-five = "oblique-arched"
+two = "straight-neck-serifless"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
@@ -8628,6 +8732,9 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 seven = "bend-serifed"
 micro-sign = "tailed-serifed"
 
@@ -8670,7 +8777,7 @@ lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight"
 lower-tau = "flat-tailed"
 one = "base-flat-top-serif"
-four = "closed"
+four = "closed-serifless"
 eight = "two-circles"
 underscore = "low"
 guillemet = "straight"
@@ -8700,6 +8807,7 @@ long-s = "flat-hook-double-serifed"
 eszet = "sulzbacher-bottom-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
+four = "closed-serifed"
 micro-sign = "toothless-rounded-serifed"
 
 [composite.ss10.slab-override.italic]
@@ -8721,9 +8829,9 @@ description = "X Window Style"
 [composite.ss11.design]
 zero = "oval-unslashed"
 one = "base"
-two = "straight-neck"
-three = "flat-top"
-four = "closed"
+two = "straight-neck-serifless"
+three = "flat-top-serifless"
+four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
@@ -8735,6 +8843,11 @@ guillemet = "straight"
 dollar = "through-cap"
 cent = "through-cap"
 percent = "rings-continuous-slash"
+
+[composite.ss11.slab-override.design]
+two = "straight-neck-serifed"
+three = "flat-top-serifed"
+four = "closed-serifed"
 
 
 
@@ -8780,8 +8893,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-dotted"
 one = "base"
-four = "closed"
-five = "oblique-arched"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "open-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
@@ -8834,6 +8947,8 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 seven = "bend-serifed"
 micro-sign = "toothless-corner-serifed"
 
@@ -8888,7 +9003,7 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "oval-unslashed"
 one = "base"
-four = "closed"
+four = "closed-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
@@ -8937,6 +9052,7 @@ cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+four = "closed-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8975,10 +9091,10 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-two = "straight-neck"
-three = "flat-top"
-four = "semi-open-non-crossing"
-five = "upright-flat"
+two = "straight-neck-serifless"
+three = "flat-top-serifless"
+four = "semi-open-non-crossing-serifless"
+five = "upright-flat-serifless"
 seven = "straight-serifed"
 eight = "two-circles"
 asterisk = "penta-low"
@@ -9019,6 +9135,10 @@ lower-alpha = "barred-double-serifed"
 lower-mu = "toothed-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
+two = "straight-neck-serifed"
+three = "flat-top-serifed"
+four = "semi-open-non-crossing-serifed"
+five = "upright-flat-serifed"
 micro-sign = "toothed-serifed"
 
 [composite.ss14.slab-override.italic]
@@ -9071,9 +9191,9 @@ cyrl-capital-ya = "straight-motion-serifed"
 cyrl-ya = "straight-motion-serifed"
 zero = "dotted"
 one = "base"
-two = "straight-neck"
-four = "closed"
-five = "oblique-arched"
+two = "straight-neck-serifless"
+four = "closed-serifless"
+five = "oblique-arched-serifless"
 six = "open-contour"
 seven = "straight-serifed"
 eight = "two-circles"
@@ -9127,6 +9247,9 @@ cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
+two = "straight-neck-serifed"
+four = "closed-serifed"
+five = "oblique-arched-serifed"
 micro-sign = "toothed-serifed"
 
 [composite.ss15.slab-override.italic]
@@ -9190,9 +9313,9 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 cyrl-ya = "straight-motion-serifed"
 one = "base"
-two = "straight-neck"
-three = "flat-top"
-four = "closed"
+two = "straight-neck-serifless"
+three = "flat-top-serifless"
+four = "closed-serifless"
 six = "open-contour"
 eight = "crossing-asymmetric"
 nine = "open-contour"
@@ -9232,6 +9355,9 @@ cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
 cyrl-ya = "straight-serifed"
+two = "straight-neck-serifed"
+three = "flat-top-serifed"
+four = "closed-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -9276,8 +9402,7 @@ cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-capital-ya = "straight-motion-serifed"
 one = "base"
-four = "semi-open"
-five = "oblique-arched"
+five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "straight-serifed"
 nine = "closed-contour"
@@ -9345,6 +9470,7 @@ cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
+five = "oblique-arched-serifed"
 micro-sign = "tailed-serifed"
 
 [composite.ss17.slab-override.italic]
@@ -9393,8 +9519,8 @@ cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
 one = "base"
-four = "closed"
-five = "upright-flat"
+four = "closed-serifless"
+five = "upright-flat-serifless"
 six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
@@ -9431,6 +9557,8 @@ lower-alpha = "barred-tailed-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+four = "closed-serifed"
+five = "upright-flat-serifed"
 seven = "bend-serifed"
 micro-sign = "tailed-serifed"
 
