Reorder `Z`/`z` variants in ascending buildup order.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1457,16 +1457,16 @@ selectorAffix.ZDesc = "serifless"
 selectorAffix."ZDesc/reduced" = "serifless"
 selectorAffix.Ezh = "serifless"
 
-[prime.capital-z.variants-buildup.stages.serifs.serifed]
+[prime.capital-z.variants-buildup.stages.serifs.top-serifed]
 rank = 2
-descriptionAffix = "serifs"
-selectorAffix.Z = "serifed"
+descriptionAffix = "serifs at top"
+selectorAffix.Z = "topSerifed"
 selectorAffix."Z/sansSerif" = "serifless"
-selectorAffix."Z/reduced" = "serifed"
+selectorAffix."Z/reduced" = "topSerifed"
 selectorAffix."Z/reduced/sansSerif" = "serifless"
 selectorAffix.ZDesc = "topSerifed"
 selectorAffix."ZDesc/reduced" = "topSerifed"
-selectorAffix.Ezh = "serifed"
+selectorAffix.Ezh = "topSerifed"
 
 [prime.capital-z.variants-buildup.stages.serifs.bottom-serifed]
 rank = 3
@@ -1479,16 +1479,16 @@ selectorAffix.ZDesc = "serifless"
 selectorAffix."ZDesc/reduced" = "serifless"
 selectorAffix.Ezh = "serifless"
 
-[prime.capital-z.variants-buildup.stages.serifs.top-serifed]
+[prime.capital-z.variants-buildup.stages.serifs.serifed]
 rank = 4
-descriptionAffix = "serifs at top"
-selectorAffix.Z = "topSerifed"
+descriptionAffix = "serifs"
+selectorAffix.Z = "serifed"
 selectorAffix."Z/sansSerif" = "serifless"
-selectorAffix."Z/reduced" = "topSerifed"
+selectorAffix."Z/reduced" = "serifed"
 selectorAffix."Z/reduced/sansSerif" = "serifless"
 selectorAffix.ZDesc = "topSerifed"
 selectorAffix."ZDesc/reduced" = "topSerifed"
-selectorAffix.Ezh = "serifed"
+selectorAffix.Ezh = "topSerifed"
 
 [prime.capital-z.variants-buildup.stages.overlay.no-overlay]
 rank = 1
@@ -4263,7 +4263,6 @@ next = "serifs"
 
 [prime.z.variants-buildup.stages.body.straight]
 rank = 1
-groupRank = 10
 descriptionAffix = "straight body shape"
 selectorAffix.z = "straight"
 selectorAffix."z/sansSerif" = "straight"
@@ -4274,7 +4273,6 @@ selectorAffix.ezh = "straight"
 
 [prime.z.variants-buildup.stages.body.curly]
 rank = 2
-groupRank = 20
 descriptionAffix = "curly body shape"
 selectorAffix.z = "curly"
 selectorAffix."z/sansSerif" = "curly"
@@ -4285,7 +4283,6 @@ selectorAffix.ezh = "straight"
 
 [prime.z.variants-buildup.stages.body.cursive]
 rank = 3
-groupRank = 30
 next = "overlay"
 descriptionAffix = "cursive body shape"
 selectorAffix.z = "cursive"
@@ -4300,7 +4297,6 @@ next = "overlay"
 
 [prime.z.variants-buildup.stages.serifs.serifless]
 rank = 1
-groupRank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.z = "serifless"
@@ -4310,20 +4306,18 @@ selectorAffix.zDesc = "serifless"
 selectorAffix."zDesc/reduced" = "serifless"
 selectorAffix.ezh = "serifless"
 
-[prime.z.variants-buildup.stages.serifs.serifed]
+[prime.z.variants-buildup.stages.serifs.top-serifed]
 rank = 2
-groupRank = 1
-descriptionAffix = "serifs"
-selectorAffix.z = "serifed"
+descriptionAffix = "serifs at top"
+selectorAffix.z = "topSerifed"
 selectorAffix."z/sansSerif" = "serifless"
-selectorAffix."z/reduced" = "serifed"
+selectorAffix."z/reduced" = "topSerifed"
 selectorAffix.zDesc = "topSerifed"
 selectorAffix."zDesc/reduced" = "topSerifed"
-selectorAffix.ezh = "serifed"
+selectorAffix.ezh = "topSerifed"
 
 [prime.z.variants-buildup.stages.serifs.bottom-serifed]
 rank = 3
-groupRank = 2
 descriptionAffix = "serifs at bottom"
 selectorAffix.z = "bottomSerifed"
 selectorAffix."z/sansSerif" = "serifless"
@@ -4332,16 +4326,15 @@ selectorAffix.zDesc = "serifless"
 selectorAffix."zDesc/reduced" = "serifless"
 selectorAffix.ezh = "serifless"
 
-[prime.z.variants-buildup.stages.serifs.top-serifed]
+[prime.z.variants-buildup.stages.serifs.serifed]
 rank = 4
-groupRank = 2
-descriptionAffix = "serifs at top"
-selectorAffix.z = "topSerifed"
+descriptionAffix = "serifs"
+selectorAffix.z = "serifed"
 selectorAffix."z/sansSerif" = "serifless"
-selectorAffix."z/reduced" = "topSerifed"
+selectorAffix."z/reduced" = "serifed"
 selectorAffix.zDesc = "topSerifed"
 selectorAffix."zDesc/reduced" = "topSerifed"
-selectorAffix.ezh = "serifed"
+selectorAffix.ezh = "topSerifed"
 
 [prime.z.variants-buildup.stages.overlay.no-overlay]
 rank = 1
