--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/monorepo",
-  "version": "29.0.0-beta.2",
+  "version": "29.0.0",
   "workspaces": [
     "packages/*",
     "tools/*"
