--- a/packages/font-glyphs/package.json
+++ b/packages/font-glyphs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/font-glyphs",
-  "version": "29.0.0-beta.2",
+  "version": "29.0.0",
   "private": true,
   "exports": {
     ".": "./src/index.mjs",
@@ -8,11 +8,11 @@
     "./unicode-knowledge": "./src/meta/unicode-knowledge.mjs"
   },
   "dependencies": {
-    "@iosevka/font-kits": "29.0.0-beta.2",
-    "@iosevka/geometry": "29.0.0-beta.2",
-    "@iosevka/geometry-cache": "29.0.0-beta.2",
-    "@iosevka/glyph": "29.0.0-beta.2",
-    "@iosevka/util": "29.0.0-beta.2",
+    "@iosevka/font-kits": "29.0.0",
+    "@iosevka/geometry": "29.0.0",
+    "@iosevka/geometry-cache": "29.0.0",
+    "@iosevka/glyph": "29.0.0",
+    "@iosevka/util": "29.0.0",
     "typo-geom": "^0.15.0"
   }
 }
