--- a/packages/geometry-cache/package.json
+++ b/packages/geometry-cache/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@iosevka/geometry-cache",
-  "version": "29.0.0-beta.2",
+  "version": "29.0.0",
   "private": true,
   "exports": {
     ".": "./src/index.mjs"
   },
   "dependencies": {
-    "@iosevka/geometry": "29.0.0-beta.2",
+    "@iosevka/geometry": "29.0.0",
     "@msgpack/msgpack": "^2.8.0"
   }
 }
