--- a/tools/generate-samples/package.json
+++ b/tools/generate-samples/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@iosevka/generate-samples",
-  "version": "29.0.0-beta.2",
+  "version": "29.0.0",
   "private": true,
   "exports": {
     ".": "./src/index.mjs"
   },
   "dependencies": {
-    "@iosevka/data-export": "29.0.0-beta.2"
+    "@iosevka/data-export": "29.0.0"
   }
 }
