--- a/.github/workflows/pr-target-branch-check.yml
+++ b/.github/workflows/pr-target-branch-check.yml
@@ -12,8 +12,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          target: "dev prerelease"
-          exclude: "dev prerelease"
+          target: "main prerelease"
+          exclude: "main prerelease"
           comment: |
               Your PR was set to target `main` or `prerelease`.
               PRs should be target `dev` instead.
