--- a/.github/workflows/pr-target-branch-check.yml
+++ b/.github/workflows/pr-target-branch-check.yml
@@ -13,7 +13,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           target: "main prerelease"
-          exclude: "main prerelease"
+          exclude: "dev prerelease"
           comment: |
               Your PR was set to target `main` or `prerelease`.
               PRs should be target `dev` instead.
