--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 jobs:
   build:
     name: Build ${{ matrix.fontName }} font
-    if: github.repository == 'be5ivnis/iosevka'
+    if: github.repository == 'be5ivnis/Iosevka'
 
     runs-on: ubuntu-latest
 
