Checkout into subdir instead of root directory

--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -14,7 +14,10 @@ jobs:
         fontName: ["Iosevka", "IosevkaSlab", "IosevkaAile", "IosevkaEtoile"]
 
     steps:
+      # Checkout repository into `iosevka` sub directory
       - uses: actions/checkout@v4
+        with:
+          path: iosevka
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -29,7 +32,7 @@ jobs:
 
       - name: Build Font ${{ matrix.fontName }}
         shell: bash
+        working-directory: iosevka
         run: |
           npm install
           npm run build -- ttf::${{ matrix.fontName }}
-
