--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Pages from ·pages-source` Branch
+name: Deploy Pages from `pages-source` Branch
 
 on:
   # Runs on pushes targeting the default branch
