cleanup leftover files from primary branches

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ node_modules
 publish-tool
 .vscode
 shared/fonts/imports/*/TTF/*
+.build
+dist
+packages
+private-parameters.toml
+private-build-plans.toml
