--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ node_modules
 publish-tool
 .vscode
 shared/fonts/imports/*/TTF/*
-.build
-dist
-packages
-params
+.build/
+dist/
+packages/
+params/private-parameters.toml
 private-build-plans.toml
