--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ publish-tool
 shared/fonts/imports/*/TTF/*
 .build/
 dist/
-packages/
-params/private-parameters.toml
+packages/font-glyphs/src/**/*.mjs
+packages/font-otl/src/**/*.mjs
 private-build-plans.toml
+params/private-parameters.toml
