Add markings to Line_Separator and Paragraph_Separator characters in Specimen. (#2238)
* cleanup leftover files from primary branches

* Add markings to {Line|Paragraph}_Separator chars.

* cleanup

* cleanup

* cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ node_modules
 publish-tool
 .vscode
 shared/fonts/imports/*/TTF/*
+.build/
+dist/
+packages/font-glyphs/src/**/*.mjs
+packages/font-otl/src/**/*.mjs
+private-build-plans.toml
+params/private-parameters.toml
