Sync .gitignore with Dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
-.next
-out
+# Dependency
 node_modules
-publish-tool
+
+# Settings
+.settings
 .vscode
-shared/fonts/imports/*/TTF/*
-.build/
-dist/
+
+# Build artifacts
+.build
+dist
+release-archives
+
+# Generated files
 packages/font-glyphs/src/**/*.mjs
 packages/font-otl/src/**/*.mjs
+
+# Private config files
+private.toml
 private-build-plans.toml
-params/private-parameters.toml
+
+# pages-source ignores
+.next
+out
+shared/fonts/imports/*/TTF/*
