--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-	"name": "@iosevka/monorepo",
-	"version": "29.0.2",
-	"workspaces": [
-		"packages/*",
-		"tools/*"
-	],
-	"scripts": {
-		"build": "verda -f verdafile.mjs",
-		"bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && node tools/misc/src/generate-ttfa-ranges.mjs",
-		"clean": "verda -f verdafile.mjs clean",
-		"lint": "eslint . --ext .mjs",
-		"update-release-sha-file": "node tools/misc/src/update-release-sha-file.mjs"
-	},
-	"dependencies": {
-		"@iarna/toml": "^2.2.5",
-		"deep-equal": "^2.2.3",
-		"otb-ttc-bundle": "^1.7.3",
-		"semver": "^7.6.0",
-		"uuid": "^9.0.1",
-		"verda": "^1.12.1",
-		"which": "^4.0.0"
-	},
-	"devDependencies": {
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-import": "^2.29.1",
-		"glob": "^10.3.10",
-		"patel": "^0.40.0",
-		"prettier": "^3.2.5"
-	},
-	"engines": {
-		"node": ">=16.0.0"
-	}
+  "name": "@iosevka/monorepo",
+  "version": "29.0.2",
+  "workspaces": [
+    "packages/*",
+    "tools/*"
+  ],
+  "scripts": {
+    "build": "verda -f verdafile.mjs",
+    "bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && node tools/misc/src/generate-ttfa-ranges.mjs",
+    "clean": "verda -f verdafile.mjs clean",
+    "lint": "eslint . --ext .mjs",
+    "generate-release-sha-file": "node tools/misc/src/generate-release-sha-file.mjs release-archives/*.zip release-archives/SHA-256.txt"
+  },
+  "dependencies": {
+    "@iarna/toml": "^2.2.5",
+    "deep-equal": "^2.2.3",
+    "otb-ttc-bundle": "^1.7.3",
+    "semver": "^7.6.0",
+    "uuid": "^9.0.1",
+    "verda": "^1.12.1",
+    "which": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "glob": "^10.3.10",
+    "patel": "^0.40.0",
+    "prettier": "^3.2.5"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
