fix `7` for `ss08` under slab.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8607,7 +8607,7 @@ cyrl-capital-ya = "curly-serifed"
 cyrl-ya = "curly-serifed"
 four = "closed-serifed"
 five = "upright-flat-serifed"
-seven = "bend-serifed"
+seven = "curly-serifed"
 micro-sign = "toothed-serifed"
 
 [composite.ss08.slab-override.italic]
