Make descender serif of `latn/Beta` automatic.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -71,6 +71,7 @@ descriptionAffix = "mostly symmetric shape"
 selectorAffix.B = "standard"
 selectorAffix."B/sansSerif" = "standard"
 selectorAffix.Bhookleft = "standard"
+selectorAffix."latn/Beta" = "standard"
 selectorAffix.BBar = "standard"
 selectorAffix.smcpB = "standard"
 selectorAffix.smcpBBar = "standard"
@@ -81,6 +82,7 @@ descriptionAffix = "more asymmetric shape"
 selectorAffix.B = "moreAsymmetric"
 selectorAffix."B/sansSerif" = "moreAsymmetric"
 selectorAffix.Bhookleft = "moreAsymmetric"
+selectorAffix."latn/Beta" = "moreAsymmetric"
 selectorAffix.BBar = "moreAsymmetric"
 selectorAffix.smcpB = "standard"
 selectorAffix.smcpBBar = "standard"
@@ -94,6 +96,7 @@ keyAffix = ""
 selectorAffix.B = ""
 selectorAffix."B/sansSerif" = ""
 selectorAffix.Bhookleft = ""
+selectorAffix."latn/Beta" = ""
 selectorAffix.BBar = ""
 selectorAffix.smcpB = ""
 selectorAffix.smcpBBar = ""
@@ -104,6 +107,7 @@ descriptionAffix = "interrupted middle bar"
 selectorAffix.B = "interrupted"
 selectorAffix."B/sansSerif" = "interrupted"
 selectorAffix.Bhookleft = "interrupted"
+selectorAffix."latn/Beta" = "interrupted"
 selectorAffix.BBar = ""
 selectorAffix.smcpB = "interrupted"
 selectorAffix.smcpBBar = ""
@@ -115,6 +119,7 @@ descriptionJoiner = "without"
 selectorAffix.B = "serifless"
 selectorAffix."B/sansSerif" = "serifless"
 selectorAffix.Bhookleft = "serifless"
+selectorAffix."latn/Beta" = "serifless"
 selectorAffix.BBar = "serifless"
 selectorAffix.smcpB = "serifless"
 selectorAffix.smcpBBar = "serifless"
@@ -125,6 +130,7 @@ descriptionAffix = "serifs at top"
 selectorAffix.B = "unilateralSerifed"
 selectorAffix."B/sansSerif" = "serifless"
 selectorAffix.Bhookleft = "serifless"
+selectorAffix."latn/Beta" = "unilateralSerifed"
 selectorAffix.BBar = "unilateralSerifed"
 selectorAffix.smcpB = "unilateralSerifed"
 selectorAffix.smcpBBar = "unilateralSerifed"
@@ -135,6 +141,7 @@ descriptionAffix = "serifs at both top and bottom"
 selectorAffix.B = "bilateralSerifed"
 selectorAffix."B/sansSerif" = "serifless"
 selectorAffix.Bhookleft = "bilateralSerifed"
+selectorAffix."latn/Beta" = "unilateralSerifed"
 selectorAffix.BBar = "bilateralSerifed"
 selectorAffix.smcpB = "bilateralSerifed"
 selectorAffix.smcpBBar = "bilateralSerifed"
