--- a/params/variants.toml
+++ b/params/variants.toml
@@ -7675,7 +7675,7 @@ cyrl-ze = "serifless"
 cyrl-capital-ka = "symmetric-connected-serifless"
 cyrl-ka = "symmetric-connected-serifless"
 cyrl-el = "straight"
-cyrl-em = "hanging-serifless"
+cyrl-em = "flat-bottom-serifless"
 cyrl-en = "serifless"
 cyrl-er = "eared-serifless"
 cyrl-capital-u = "straight-serifless"
@@ -7699,6 +7699,9 @@ six = "straight-bar"
 seven = "straight-serifless"
 eight = "crossing"
 nine = "straight-bar"
+# Dots
+punctuation-dot = "round"
+diacritic-dot = "round"
 # Symbols
 tilde = "low"
 asterisk = "penta-high"
@@ -7720,8 +7723,6 @@ question = "smooth"
 pilcrow = "high"
 partial-derivative = "curly-bar"
 micro-sign = "toothed-serifless"
-punctuation-dot = "round"
-diacritic-dot = "round"
 lig-ltgteq = "flat"
 lig-neq = "slightly-slanted"
 lig-equal-chain = "with-notch"
@@ -7814,7 +7815,7 @@ cyrl-capital-ze = "unilateral-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-capital-ka = "symmetric-connected-serifed"
 cyrl-ka = "symmetric-connected-serifed"
-cyrl-em = "hanging-serifed"
+cyrl-em = "flat-bottom-serifed"
 cyrl-en = "serifed"
 cyrl-er = "eared-serifed"
 cyrl-capital-u = "straight-turn-serifed"
@@ -7896,7 +7897,6 @@ cyrl-capital-zhe = "straight"
 cyrl-zhe = "straight"
 cyrl-capital-ka = "straight-serifless"
 cyrl-ka = "straight-serifless"
-cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-serifless"
@@ -7948,7 +7948,6 @@ lower-mu = "toothed-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-capital-ka = "straight-serifed"
 cyrl-ka = "straight-serifed"
-cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
@@ -7967,6 +7966,7 @@ capital-c = "unilateral-serifed"
 capital-g = "toothless-rounded-serifed-hooked"
 capital-i = "short-serifed"
 capital-j = "serifless"
+capital-m = "hanging-serifless"
 capital-s = "bilateral-serifed"
 capital-t = "serifed"
 capital-x = "straight-serifed"
@@ -7998,6 +7998,7 @@ cyrl-zhe = "straight"
 cyrl-capital-ze = "unilateral-serifed"
 cyrl-capital-ka = "straight-serifless"
 cyrl-ka = "straight-serifless"
+cyrl-em = "hanging-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-serifless"
@@ -8010,6 +8011,8 @@ six = "closed-contour"
 seven = "bend-serifed"
 eight = "two-circles"
 nine = "closed-contour"
+punctuation-dot = "square"
+diacritic-dot = "square"
 asterisk = "hex-low"
 brace = "straight"
 guillemet = "straight"
@@ -8018,11 +8021,10 @@ cent = "through-cap"
 percent = "rings-continuous-slash"
 partial-derivative = "straight-bar"
 micro-sign = "toothed-serifless"
-punctuation-dot = "square"
-diacritic-dot = "square"
 
 [composite.ss02.slab-override.design]
 capital-j = "serifed-symmetric"
+capital-m = "hanging-serifed"
 a = "double-storey-serifed"
 b = "toothed-serifed"
 d = "toothed-serifed"
@@ -8042,6 +8044,7 @@ lower-mu = "tailed-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-capital-ka = "straight-serifed"
 cyrl-ka = "straight-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
@@ -8157,6 +8160,7 @@ description = "Menlo Style"
 [composite.ss04.design]
 capital-d = "more-rounded-serifless"
 capital-g = "toothless-corner-serifless-hooked"
+capital-m = "hanging-serifless"
 capital-q = "straight"
 a = "double-storey-serifless"
 e = "flat-crossbar"
@@ -8180,6 +8184,7 @@ cyrl-capital-zhe = "straight"
 cyrl-zhe = "straight"
 cyrl-capital-ka = "straight-serifless"
 cyrl-ka = "straight-serifless"
+cyrl-em = "hanging-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
@@ -8191,6 +8196,8 @@ four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
+punctuation-dot = "square"
+diacritic-dot = "square"
 asterisk = "hex-low"
 underscore = "low"
 brace = "straight"
@@ -8200,12 +8207,11 @@ ampersand = "upper-open"
 percent = "rings-continuous-slash"
 bar = "force-upright"
 micro-sign = "tailed-serifless"
-punctuation-dot = "square"
-diacritic-dot = "square"
 
 [composite.ss04.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
+capital-m = "hanging-serifed"
 a = "double-storey-serifed"
 b = "toothed-serifed"
 c = "unilateral-serifed"
@@ -8231,6 +8237,7 @@ lower-mu = "tailed-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-capital-ka = "straight-serifed"
 cyrl-ka = "straight-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
@@ -8353,7 +8360,6 @@ lower-iota = "tailed-serifed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 lower-chi = "straight-motion-serifed"
-cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
@@ -8367,6 +8373,8 @@ six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
 nine = "closed-contour"
+punctuation-dot = "square"
+diacritic-dot = "square"
 brace = "straight"
 guillemet = "straight"
 number-sign = "slanted"
@@ -8376,8 +8384,6 @@ percent = "rings-continuous-slash"
 bar = "force-upright"
 pilcrow = "low"
 micro-sign = "toothed-serifless"
-punctuation-dot = "square"
-diacritic-dot = "square"
 
 [composite.ss06.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
@@ -8406,7 +8412,6 @@ lower-mu = "tailed-serifed"
 lower-chi = "straight-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-ka = "symmetric-connected-serifed"
-cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
@@ -8514,6 +8519,7 @@ capital-g = "toothless-rounded-serifless-hooked"
 capital-i = "short-serifed"
 capital-j = "serifless"
 capital-k = "curly-serifless"
+capital-m = "hanging-serifless"
 capital-n = "asymmetric-serifless"
 capital-q = "straight"
 capital-r = "curly-serifless"
@@ -8548,6 +8554,7 @@ cyrl-capital-zhe = "curly"
 cyrl-zhe = "curly"
 cyrl-capital-ka = "curly-serifless"
 cyrl-ka = "curly-serifless"
+cyrl-em = "hanging-serifless"
 cyrl-capital-u = "curly-serifless"
 cyrl-u = "curly-serifless"
 cyrl-ef = "serifless"
@@ -8584,6 +8591,7 @@ capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-rounded-serifed-hooked"
 capital-j = "serifed-symmetric"
 capital-k = "curly-serifed"
+capital-m = "hanging-serifed"
 capital-n = "asymmetric-serifed"
 capital-r = "curly-serifed"
 capital-v = "curly-serifed"
@@ -8607,6 +8615,7 @@ capital-lambda = "curly-base-serifed"
 lower-mu = "toothed-serifed"
 cyrl-capital-ka = "curly-serifed"
 cyrl-ka = "curly-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-capital-u = "curly-serifed"
 cyrl-u = "curly-serifed"
 cyrl-ef = "serifed"
@@ -8654,7 +8663,6 @@ long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
-cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-serifless"
@@ -8698,7 +8706,6 @@ y = "straight-turn-serifed"
 z = "straight-serifed"
 long-s = "flat-hook-double-serifed"
 eszet = "longs-s-lig-bottom-serifed"
-cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
@@ -8965,7 +8972,6 @@ lower-lambda = "straight-turn"
 lower-mu = "toothed-serifless"
 lower-pi = "tailless"
 lower-tau = "tailless"
-cyrl-em = "flat-bottom-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-serifless"
@@ -8978,6 +8984,8 @@ six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
 nine = "closed-contour"
+punctuation-dot = "square"
+diacritic-dot = "square"
 paren = "large-contour"
 guillemet = "straight"
 number-sign = "slanted"
@@ -8985,8 +8993,6 @@ cent = "through-cap"
 percent = "rings-continuous-slash"
 pilcrow = "low"
 micro-sign = "toothed-serifless"
-punctuation-dot = "square"
-diacritic-dot = "square"
 
 [composite.ss13.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
@@ -9018,7 +9024,6 @@ lower-iota = "tailed-serifed"
 lower-mu = "toothed-serifed"
 cyrl-ze = "unilateral-serifed"
 cyrl-ka = "symmetric-connected-serifed"
-cyrl-em = "flat-bottom-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
@@ -9034,10 +9039,11 @@ description = "JetBrains Mono Style"
 
 [composite.ss14.design]
 capital-g = "toothless-rounded-serifless-hooked"
+capital-j = "serifless"
 capital-k = "symmetric-connected-serifless"
+capital-m = "hanging-serifless"
 capital-q = "straight"
 capital-w = "straight-flat-top-serifless"
-capital-j = "serifless"
 d = "toothed-serifless"
 f = "flat-hook-serifless"
 g = "single-storey-flat-hook-serifless"
@@ -9057,6 +9063,7 @@ lower-lambda = "straight"
 lower-mu = "toothed-serifless"
 lower-xi = "rounded"
 lower-tau = "flat-tailed"
+cyrl-em = "hanging-serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
@@ -9089,9 +9096,10 @@ cyrl-u = "cursive-flat-hook-serifless"
 
 [composite.ss14.slab-override.design]
 capital-g = "toothless-rounded-serifed-hooked"
-capital-k = "symmetric-connected-serifed"
-capital-w = "straight-flat-top-serifed"
 capital-j = "serifed"
+capital-k = "symmetric-connected-serifed"
+capital-m = "hanging-serifed"
+capital-w = "straight-flat-top-serifed"
 d = "toothed-serifed"
 f = "flat-hook-serifed"
 g = "single-storey-flat-hook-serifed"
@@ -9103,6 +9111,7 @@ z = "straight-serifed"
 long-s = "flat-hook-bottom-serifed"
 lower-alpha = "barred-double-serifed"
 lower-mu = "toothed-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
 two = "straight-neck-serifed"
@@ -9132,6 +9141,7 @@ tag = "ss15"
 description = "IBM Plex Mono Style"
 
 [composite.ss15.design]
+capital-m = "hanging-serifless"
 a = "double-storey-tailed"
 d = "toothed-serifless"
 f = "flat-hook-serifed"
@@ -9154,6 +9164,7 @@ lower-tau = "flat-tailed"
 lower-chi = "semi-chancery-straight"
 cyrl-capital-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
+cyrl-em = "hanging-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-serifless"
@@ -9204,6 +9215,7 @@ cyrl-yery = "cursive"
 ampersand = "closed"
 
 [composite.ss15.slab-override.design]
+capital-m = "hanging-serifed"
 d = "toothed-serifed"
 k = "straight-serifed"
 u = "toothed-serifed"
@@ -9212,6 +9224,7 @@ y = "straight-turn-serifed"
 eszet = "traditional-flat-hook-bottom-serifed"
 cyrl-capital-ka = "symmetric-connected-serifed"
 cyrl-ka = "symmetric-connected-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
@@ -9244,6 +9257,7 @@ capital-d = "more-rounded-serifless"
 capital-g = "toothless-corner-inward-serifed-hooked"
 capital-k = "symmetric-connected-serifless"
 capital-l = "motion-serifed"
+capital-m = "hanging-serifless"
 capital-s = "bilateral-inward-serifed"
 capital-t = "serifed"
 a = "double-storey-serifed"
@@ -9275,6 +9289,7 @@ lower-tau = "semi-tailed"
 cyrl-capital-ze = "bilateral-inward-serifed"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
+cyrl-em = "hanging-serifless"
 cyrl-er = "eared-motion-serifed"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
@@ -9303,6 +9318,7 @@ micro-sign = "toothed-bottom-right-serifed"
 capital-d = "more-rounded-bilateral-serifed"
 capital-k = "symmetric-connected-serifed"
 capital-l = "serifed"
+capital-m = "hanging-serifed"
 h = "straight-serifed"
 k = "straight-serifed"
 m = "serifed"
@@ -9320,6 +9336,7 @@ eszet = "longs-s-lig-dual-serifed"
 lower-thorn = "serifed"
 lower-mu = "toothed-serifed"
 cyrl-ka = "symmetric-connected-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-er = "eared-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
@@ -9376,6 +9393,8 @@ five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "straight-serifed"
 nine = "closed-contour"
+punctuation-dot = "square"
+diacritic-dot = "square"
 asterisk = "hex-low"
 underscore = "low"
 brace = "curly-flat-boundary"
@@ -9388,8 +9407,6 @@ cent = "bar-interrupted-cap"
 pilcrow = "low"
 partial-derivative = "straight-bar"
 micro-sign = "tailed-serifless"
-punctuation-dot = "square"
-diacritic-dot = "square"
 
 [composite.ss17.italic]
 a = "single-storey-tailed"
@@ -9466,6 +9483,7 @@ description = "Input Mono Style"
 [composite.ss18.design]
 capital-g = "toothless-rounded-serifless-hooked"
 capital-k = "symmetric-connected-serifless"
+capital-m = "hanging-serifless"
 a = "double-storey-tailed"
 b = "toothless-corner-serifless"
 d = "toothed-serifless"
@@ -9482,6 +9500,7 @@ eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-tailed"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
+cyrl-em = "hanging-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
@@ -9513,6 +9532,7 @@ eszet = "longs-s-lig-descending-serifless"
 [composite.ss18.slab-override.design]
 capital-g = "toothless-rounded-serifed-hooked"
 capital-k = "symmetric-connected-serifed"
+capital-m = "hanging-serifed"
 b = "toothless-corner-serifed"
 d = "toothed-serifed"
 f = "serifed-crossbar-at-x-height"
@@ -9524,6 +9544,7 @@ z = "straight-serifed"
 long-s = "flat-hook-double-serifed-xh"
 eszet = "longs-s-lig-bottom-serifed"
 lower-alpha = "barred-tailed-serifed"
+cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
