Make attachment serifs of 3 `K` chars automatic.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -566,7 +566,6 @@ rank = 1
 descriptionAffix = "straight shape"
 selectorAffix.K = "straight"
 selectorAffix."K/sansSerif" = "straight"
-selectorAffix."grek/KaiSymbol" = "straight"
 selectorAffix.KDescender = "straight"
 
 [prime.capital-k.variants-buildup.stages.body.curly]
@@ -574,7 +573,6 @@ rank = 2
 descriptionAffix = "curly shape"
 selectorAffix.K = "curly"
 selectorAffix."K/sansSerif" = "curly"
-selectorAffix."grek/KaiSymbol" = "curly"
 selectorAffix.KDescender = "curly"
 
 [prime.capital-k.variants-buildup.stages.body.symmetric-touching]
@@ -582,7 +580,6 @@ rank = 3
 descriptionAffix = "symmetric legs touching the vertical bar"
 selectorAffix.K = "symmetricTouching"
 selectorAffix."K/sansSerif" = "symmetricTouching"
-selectorAffix."grek/KaiSymbol" = "symmetricTouching"
 selectorAffix.KDescender = "symmetricTouching"
 
 [prime.capital-k.variants-buildup.stages.body.symmetric-connected]
@@ -590,7 +587,6 @@ rank = 4
 descriptionAffix = "symmetric legs connected to the vertical bar"
 selectorAffix.K = "symmetricConnected"
 selectorAffix."K/sansSerif" = "symmetricConnected"
-selectorAffix."grek/KaiSymbol" = "symmetricConnected"
 selectorAffix.KDescender = "symmetricConnected"
 
 [prime.capital-k.variants-buildup.stages.serifs.serifless]
@@ -599,7 +595,6 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.K = "serifless"
 selectorAffix."K/sansSerif" = "serifless"
-selectorAffix."grek/KaiSymbol" = "serifless"
 selectorAffix.KDescender = "serifless"
 
 [prime.capital-k.variants-buildup.stages.serifs.top-left-serifed]
@@ -607,7 +602,6 @@ rank = 2
 descriptionAffix = "serifs at top left"
 selectorAffix.K = "topLeftSerifed"
 selectorAffix."K/sansSerif" = "serifless"
-selectorAffix."grek/KaiSymbol" = "topLeftSerifed"
 selectorAffix.KDescender = "topLeftSerifed"
 
 [prime.capital-k.variants-buildup.stages.serifs.bottom-right-serifed]
@@ -615,7 +609,6 @@ rank = 3
 descriptionAffix = "serifs at bottom right"
 selectorAffix.K = "bottomRightSerifed"
 selectorAffix."K/sansSerif" = "serifless"
-selectorAffix."grek/KaiSymbol" = "bottomRightSerifed2"
 selectorAffix.KDescender = "serifless"
 
 [prime.capital-k.variants-buildup.stages.serifs.top-left-and-bottom-right-serifed]
@@ -623,7 +616,6 @@ rank = 4
 descriptionAffix = "serifs at top left and bottom right"
 selectorAffix.K = "topLeftAndBottomRightSerifed"
 selectorAffix."K/sansSerif" = "serifless"
-selectorAffix."grek/KaiSymbol" = "topLeftAndBottomRightSerifed2"
 selectorAffix.KDescender = "topLeftSerifed"
 
 [prime.capital-k.variants-buildup.stages.serifs.serifed]
@@ -631,7 +623,6 @@ rank = 5
 descriptionAffix = "serifs"
 selectorAffix.K = "serifed"
 selectorAffix."K/sansSerif" = "serifless"
-selectorAffix."grek/KaiSymbol" = "serifed2"
 selectorAffix.KDescender = "serifed"
 
 
@@ -5374,6 +5365,7 @@ selectorAffix."cyrl/Ka" = "straight"
 selectorAffix."cyrl/KaDescender" = "straight"
 selectorAffix."cyrl/KaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/KaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/KaBashkir" = "straight"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.body.curly]
 rank = 2
@@ -5382,6 +5374,7 @@ selectorAffix."cyrl/Ka" = "curly"
 selectorAffix."cyrl/KaDescender" = "curly"
 selectorAffix."cyrl/KaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/KaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/KaBashkir" = "curly"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.body.symmetric-touching]
 rank = 3
@@ -5390,6 +5383,7 @@ selectorAffix."cyrl/Ka" = "symmetricTouching"
 selectorAffix."cyrl/KaDescender" = "symmetricTouching"
 selectorAffix."cyrl/KaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/KaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/KaBashkir" = "symmetricTouching"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.body.symmetric-connected]
 rank = 4
@@ -5398,6 +5392,7 @@ selectorAffix."cyrl/Ka" = "symmetricConnected"
 selectorAffix."cyrl/KaDescender" = "symmetricConnected"
 selectorAffix."cyrl/KaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/KaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/KaBashkir" = "symmetricConnected"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -5407,6 +5402,7 @@ selectorAffix."cyrl/Ka" = "serifless"
 selectorAffix."cyrl/KaDescender" = "serifless"
 selectorAffix."cyrl/KaVBar" = "serifless"
 selectorAffix."cyrl/KaHook" = "serifless"
+selectorAffix."cyrl/KaBashkir" = "serifless"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.serifs.top-left-serifed]
 rank = 2
@@ -5415,6 +5411,7 @@ selectorAffix."cyrl/Ka" = "topLeftSerifed"
 selectorAffix."cyrl/KaDescender" = "topLeftSerifed"
 selectorAffix."cyrl/KaVBar" = "topLeftSerifed"
 selectorAffix."cyrl/KaHook" = "topLeftSerifed"
+selectorAffix."cyrl/KaBashkir" = "serifless"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 3
@@ -5423,6 +5420,7 @@ selectorAffix."cyrl/Ka" = "bottomRightSerifed"
 selectorAffix."cyrl/KaDescender" = "serifless"
 selectorAffix."cyrl/KaVBar" = "bottomRightSerifed"
 selectorAffix."cyrl/KaHook" = "serifless"
+selectorAffix."cyrl/KaBashkir" = "bottomRightSerifed"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.serifs.top-left-and-bottom-right-serifed]
 rank = 4
@@ -5431,6 +5429,7 @@ selectorAffix."cyrl/Ka" = "topLeftAndBottomRightSerifed"
 selectorAffix."cyrl/KaDescender" = "topLeftSerifed"
 selectorAffix."cyrl/KaVBar" = "topLeftAndBottomRightSerifed"
 selectorAffix."cyrl/KaHook" = "topLeftSerifed"
+selectorAffix."cyrl/KaBashkir" = "bottomRightSerifed"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.serifs.serifed]
 rank = 5
@@ -5438,7 +5437,8 @@ descriptionAffix = "serifs"
 selectorAffix."cyrl/Ka" = "serifed"
 selectorAffix."cyrl/KaDescender" = "serifed"
 selectorAffix."cyrl/KaVBar" = "serifed"
-selectorAffix."cyrl/KaHook" = "serifedKH"
+selectorAffix."cyrl/KaHook" = "serifed"
+selectorAffix."cyrl/KaBashkir" = "serifed"
 
 
 
@@ -5461,6 +5461,7 @@ selectorAffix."cyrl/ka" = "straight"
 selectorAffix."cyrl/kaDescender" = "straight"
 selectorAffix."cyrl/kaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/kaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/kaBashkir" = "straight"
 
 [prime.cyrl-ka.variants-buildup.stages.body.curly]
 rank = 2
@@ -5469,6 +5470,7 @@ selectorAffix."cyrl/ka" = "curly"
 selectorAffix."cyrl/kaDescender" = "curly"
 selectorAffix."cyrl/kaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/kaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/kaBashkir" = "curly"
 
 [prime.cyrl-ka.variants-buildup.stages.body.symmetric-touching]
 rank = 3
@@ -5477,6 +5479,7 @@ selectorAffix."cyrl/ka" = "symmetricTouching"
 selectorAffix."cyrl/kaDescender" = "symmetricTouching"
 selectorAffix."cyrl/kaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/kaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/kaBashkir" = "symmetricTouching"
 
 [prime.cyrl-ka.variants-buildup.stages.body.symmetric-connected]
 rank = 4
@@ -5485,6 +5488,7 @@ selectorAffix."cyrl/ka" = "symmetricConnected"
 selectorAffix."cyrl/kaDescender" = "symmetricConnected"
 selectorAffix."cyrl/kaVBar" = "symmetricConnectedVB"
 selectorAffix."cyrl/kaHook" = "symmetricConnectedKH"
+selectorAffix."cyrl/kaBashkir" = "symmetricConnected"
 
 [prime.cyrl-ka.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -5494,6 +5498,7 @@ selectorAffix."cyrl/ka" = "serifless"
 selectorAffix."cyrl/kaDescender" = "serifless"
 selectorAffix."cyrl/kaVBar" = "serifless"
 selectorAffix."cyrl/kaHook" = "serifless"
+selectorAffix."cyrl/kaBashkir" = "serifless"
 
 [prime.cyrl-ka.variants-buildup.stages.serifs.top-left-serifed]
 rank = 2
@@ -5502,6 +5507,7 @@ selectorAffix."cyrl/ka" = "topLeftSerifed"
 selectorAffix."cyrl/kaDescender" = "topLeftSerifed"
 selectorAffix."cyrl/kaVBar" = "topLeftSerifed"
 selectorAffix."cyrl/kaHook" = "topLeftSerifed"
+selectorAffix."cyrl/kaBashkir" = "serifless"
 
 [prime.cyrl-ka.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 3
@@ -5510,6 +5516,7 @@ selectorAffix."cyrl/ka" = "bottomRightSerifed"
 selectorAffix."cyrl/kaDescender" = "serifless"
 selectorAffix."cyrl/kaVBar" = "bottomRightSerifed"
 selectorAffix."cyrl/kaHook" = "serifless"
+selectorAffix."cyrl/kaBashkir" = "bottomRightSerifed"
 
 [prime.cyrl-ka.variants-buildup.stages.serifs.top-left-and-bottom-right-serifed]
 rank = 4
@@ -5518,6 +5525,7 @@ selectorAffix."cyrl/ka" = "topLeftAndBottomRightSerifed"
 selectorAffix."cyrl/kaDescender" = "topLeftSerifed"
 selectorAffix."cyrl/kaVBar" = "topLeftAndBottomRightSerifed"
 selectorAffix."cyrl/kaHook" = "topLeftSerifed"
+selectorAffix."cyrl/kaBashkir" = "bottomRightSerifed"
 
 [prime.cyrl-ka.variants-buildup.stages.serifs.serifed]
 rank = 5
@@ -5525,7 +5533,8 @@ descriptionAffix = "serifs"
 selectorAffix."cyrl/ka" = "serifed"
 selectorAffix."cyrl/kaDescender" = "serifed"
 selectorAffix."cyrl/kaVBar" = "serifed"
-selectorAffix."cyrl/kaHook" = "serifedKH"
+selectorAffix."cyrl/kaHook" = "serifed"
+selectorAffix."cyrl/kaBashkir" = "serifed"
 
 
 
