Check condition for PR

--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 jobs:
   bump_version_check:
     name: Bump version check
-    if: github.repository == 'be5invis/Iosevka'
+    if: github.repository == 'be5invis/Iosevka' && github.base_ref == 'dev'
     runs-on: ubuntu-latest
 
     steps:
