--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -8,6 +8,9 @@ jobs:
     if: github.repository == 'be5invis/Iosevka' && github.base_ref == 'dev'
     runs-on: ubuntu-latest
 
+    outputs:
+      changed: ${{ steps.check_changes.outputs.changed }}
+
     steps:
       - uses: actions/checkout@v4
       - name: Checkout PR
@@ -27,23 +30,40 @@ jobs:
           npm install
           npm run bump-ver
 
-      - name: Commit to PR if anything changed
+      - id: check_changes
+        name: Check changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --local user.email "action@github.com"
+          if git diff --quiet; then
+            echo "changed=0" >> "$GITHUB_OUTPUT"
+          else
+            echo "changed=1" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Commit to PR
+        if: steps.check_changes.outputs.changed == '1'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --local user.email "actions@github.com
           git config --local user.name "GitHub Actions"
           git add --all
-          git commit -m "Bump version" || exit 0
-          # We have to push to the PR now
+          git commit -m "Bump version"
           git push
-          # Trigger a failure so the next stage won't run
-          exit 1
+
+      - name: Add PR comment
+        uses: mshick/add-pr-comment@v2
+        if : steps.check_changes.outputs.changed == '1'
+        with:
+          message: |
+            Your pull request changes the version number.
+            A commit has been made to bump the version number.
 
   build:
     name: Build ${{ matrix.fontName }} font
-    if: github.repository == 'be5invis/Iosevka'
     needs: bump_version_check
+    if: github.repository == 'be5invis/Iosevka' && github.base_ref == 'dev' && steps.bump_version_check.outputs.changed == '1'
     runs-on: ubuntu-latest
 
     strategy:
