--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -63,7 +63,7 @@ jobs:
   build:
     name: Build ${{ matrix.fontName }} font
     needs: bump_version_check
-    if: github.repository == 'be5invis/Iosevka' && github.base_ref == 'dev' && steps.bump_version_check.outputs.changed == '1'
+    if: github.repository == 'be5invis/Iosevka' && github.base_ref == 'dev' && needs.bump_version_check.outputs.changed == '1'
     runs-on: ubuntu-latest
 
     strategy:
