Limit fetch depth

--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git fetch origin +refs/pull/${{ github.event.pull_request.number }}/head
+          git fetch --depth=1 origin +refs/pull/${{ github.event.pull_request.number }}/head
           git checkout FETCH_HEAD
 
       - name: Use Node.js
