Disable line ending conversion

--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -30,6 +30,7 @@ jobs:
       - id: check_changes
         name: Check changes
         run: |
+          git config core.autocrlf false
           if git diff --quiet; then
             echo "changed=0" >> "$GITHUB_OUTPUT"
           else
